fix(Catalogue): update styles for edit icon to improve visibility and interaction

--- a/src/pages/Catalogue/Catalogue.css
+++ b/src/pages/Catalogue/Catalogue.css
@@ -43,16 +43,17 @@
     border-radius: 0 0 4px 4px;
 }
 .FaEdit{
-    width: 1.5vw;
-    height: 1.5vw;
-    background-color: rgb(255, 255, 255);
-    padding-left: 2%;
-    padding-right: 2.5%;
-    padding-top: 2.3%;
-    padding-bottom: 2.3%;
-    border-radius: 40px;
-    color: #A82CD4;
+    width: 25px;
+    height: 25px;
+    background: rgba(241, 65, 65, 0.5);
+    padding-left: 5%;
+    padding-right: 3%;
+    padding-top: 3%;
+    padding-bottom: 5%;
+    border-radius: 45%;
+    color: #ffffff;
     cursor: pointer;
+    position: absolute;
 }
 
 
